Added bar on top of page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./public/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>BMI Calculator</title>
   </head>
   <body>
